align fix

--- a/frontend/assets/scss/base/_base.scss
+++ b/frontend/assets/scss/base/_base.scss
@@ -19,3 +19,15 @@
     position: fixed;
     z-index: -1000;
 }
+
+.ql-align-center {
+    text-align: center;
+}
+
+.ql-align-right {
+    text-align: right;
+}
+
+.ql-align-left {
+    text-align: left;
+}
